@startuml

'https://plantuml.com/class-diagram

class Main{
+static void Main (String[] args)
}

Main <|-- Streaming
class Streaming{
-static Streaming stream
-currentUser User
-currentMedia Media
-ArrayList<User> users
-ArrayList<Playlist> savedPlaylists
-ArrayList<Playlist> hasSeenPlaylists
-ArrayList<Movies> movies
-ArrayList<Series> series

+synchronized static streaming getInstance()
+boolean checkUserName(String)
+User checkUserPW(String, String)
+void setupStream()
+void addSavedPlaylists(Playlist)
+void addHasSeenPlaylists(Playlist)
+void addUser(User)

}

Streaming <|-- StreamUI
class StreamUI {
-JFrame frame
-JPanel currentPanel
-JPanel loginPanel
-JPanel mainPanel
-JPanel savedTitles
-JPanel hasWatchPanel
-JPanel playPanel
-JPanel allMediaPanel
-JPanel allMoviesPanel
-JPanel allSeriesPanel
-JPanel viewMediaPanel
-JPanel searchPanel

+JFrame createFrame()
+JFrame getFrame()
-JPanel createLoginPanel()
-JPanel createMainPanel()
-JPanel createSavedTitlesPane()
-JPanel createHasWatch()
-JPanel createPlayPanel()
-JPanel createAllMedia()
-JPanel createAllMoviesPanel()
-JPanel createAllSeriesPanel()
-JPanel createViewPanel()
-JPanel createSearchPanel()
-void swapPanel(JPanel panel)
}

Streaming <|-- Media
abstract class Media {
-final String name
-final int year
-int rating
-final ArrayList<String> genre
-final String imgPath
+toString()
}

class Movie extends Media {
-final int year
}

class Series extends Media {
-final ArrayList<String> seasons
-final int yearStart
-final int yearEnd
}
abstract class Media {
-final String name
-final float rating
-final ArrayList<String> genre

+toString()
}

Streaming <|-- FileIO
class FileIO {
+List<String> readData(File)
+ArrayList<Movie> setUpMovies()
+ArrayList<Series> setUpSeries()
+ArrayList<User> setUpUser()
+ArrayList<Playlist> setUpPlaylist(File)
+void createUser(String, String)
+void updateSavedPlaylists()
+void updateHasSeenPlaylists()
-void writePlaylistsToFile(Writer, Playlist)
}

Streaming <|-- User
class User {
-String name
-String password
-ArrayList<Media> hasSeen
-ArrayList<Media> savedMedia

+boolean addToSaved(Media)
+boolean removeFromSaved(Media)
+void watchMovie(Media)
}

User <|-- Playlist
class Playlist {
+final String ownerName
+final ArrayList<Media> medias
}


@enduml
